Resolvendo erro do cadastro de seção